--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.2",
     "graphql": "^16.2.0",
     "mongodb": "^4.3.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
