--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.6.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "graphql": "^16.2.0",
+    "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "mysql2": "^2.3.3",
