--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
